 - Added info about subroutine "WriteStringDigitsToHUD" in the main HTML file
 - Fixed a bug on SpriteHUDTest.asm when set to display 2 numbers and the player presses right,
   would increment the high word of the first of the two numbers when it should only increment
   only the second number, due to a typo on the if statement on determining should the increment
   be 16-bit or 32-bit.
 - Added to the HTML file what was missing was the subroutines that convert status bar characters
   to overworld border characters.
 - Fixed an issue where if you simply set !OverWorldBorderBlankTile to any other value besides
   $1F, the routines "SixteenBitHexDecDivisionToOWB" and "ThirtyTwoBitHexDecDivisionToOWB"
   wouldn't update to that because I forgot to make it use such a define.
 - Added signed HexDec routines. These handles a two's complement values.
 - Added 16x8 ("bonus stars" number) support.
05-02-2025 v3.2.1
 - Fixed an oversight that I forgot to update the HTML formatting (content centered rather than
   on the left edge of the viewport) for other HTML files.
 - Updated the link to a youtube video "Binary to decimal can’t be that hard, right?" to point to
   a more appropriate video time.
08-03-2025 v3.2.1 some more description updates
 - Fixed an error on "CountingAnimation16Bit" that when "Gradual" is greater than "Actual", it is
   supposed to decrease Gradual towards actual and therefore "-=" is a more appropriate than "+="
 - Mentioned 2 miscellaneous subroutines with a table: StringTo8x16Char and
   CountingAnimation16Bit.
 - Mentioned on Frames2Timer that hours' maximum that it can safely represent is 255, and thus
   the maximum timer value is $034BBFFF, which is 255 hours, 59 minutes, 59 seconds, and 59
   frames (about 98 centiseconds).
 - Added notice in the comments about repeated symbols routine.
 - Renamed "FramesToTimer" to "TimerToFrames" to avoid misleading name.
 - Fixed grammar issue with the readme explaining the 8x16 graphic.